--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Koulen&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 * {
   margin: 0;
   padding: 0;
@@ -8,16 +10,16 @@ html {
   font-size: 15px; }
   @media screen and (max-width: 768px) {
     html {
-      font-size: textdesktop; } }
+      font-size: 18px; } }
   @media screen and (max-width: 575px) {
     html {
-      font-size: texttableth; } }
+      font-size: 17px; } }
   @media screen and (max-width: 480px) {
     html {
-      font-size: texttabletv; } }
+      font-size: 16px; } }
   @media screen and (max-width: 320px) {
     html {
-      font-size: textmovil; } }
+      font-size: 15px; } }
 
 body {
   background: #212529; }
@@ -93,16 +95,14 @@ main {
       .containerIndex__titulo {
         display: none; } }
   .containerIndex__subtitulo {
-    font-size: 2rem; }
+    font-size: 1.5rem;
+    font-family: "Open Sans"; }
     @media screen and (max-width: 768px) {
       .containerIndex__subtitulo {
-        font-size: 1.5rem; } }
+        font-size: 1rem; } }
     @media screen and (max-width: 575px) {
       .containerIndex__subtitulo {
-        font-size: .75rem; } }
-    @media screen and (max-width: 320px) {
-      .containerIndex__subtitulo {
-        font-size: .5rem; } }
+        font-size: .8rem; } }
 
 .listaCaracteristicas {
   display: flex;
@@ -125,6 +125,9 @@ main {
   height: 70%;
   width: 100%;
   border-radius: 5%; }
+
+.textodescriptivo {
+  font-family: "Open Sans"; }
 
 .contenedorClientes {
   height: 18rem; }
@@ -167,7 +170,7 @@ footer {
   justify-content: space-between;
   color: white;
   background: linear-gradient(180deg, #212529 0%, #0d6efd 100%);
-  font: "koulen"; }
+  font-family: "Open Sans"; }
   footer .animacionFooter:hover {
     animation: text-focus-in 0.3s cubic-bezier(0.55, 0.085, 0.68, 0.53) both; }
   footer a img {
@@ -181,7 +184,6 @@ footer {
     width: 10rem;
     height: 10rem; }
 
-/*Animista*/
 @keyframes text-focus-in {
   0% {
     filter: blur(12px);
