--- a/sass/partial/_contacto.scss
+++ b/sass/partial/_contacto.scss
@@ -1,10 +1,11 @@
+//PAGINA CONTACTOS
+
 .formulario{
     .logoContacto{
         width: 30vw;
         @include tableth {
             display: none;
         }
-
     }
     select{
         line-height: 1.5;
@@ -33,6 +34,3 @@
         opacity: 1;    
     }
 }
-
-
-  
