--- a/sass/partial/_html.scss
+++ b/sass/partial/_html.scss
@@ -1,4 +1,7 @@
+//FORMATO y FUENTES para todo el SITIO
+
 @import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 
 *{
@@ -7,19 +10,19 @@
     box-sizing: border-box;
 }
 
+//Tamano fuente responsive
 html{
     font-size: 15px;
     @include desktop {
-        font-size: textdesktop;
+        font-size: $textdesktop;
     }
     @include tableth {
-        font-size: texttableth;
+        font-size: $texttableth;
     }
     @include tabletv {
-        font-size: texttabletv;
+        font-size: $texttabletv;
     }
     @include movil {
-        font-size: textmovil;
+        font-size: $textmovil;
     }
 }
-
