--- a/sass/partial/_index.scss
+++ b/sass/partial/_index.scss
@@ -1,3 +1,5 @@
+//PAGINA INDEX
+//CAROUSEL
 .containerIndex{ 
     display: flex;
     justify-content: center;
@@ -17,15 +19,13 @@
         }
     }
     &__subtitulo{
-        font-size: 2rem;
+        font-size: 1.5rem;
+        font-family: map-get($tema, fuentetexto);
         @include desktop {
-            font-size: 1.5rem;
+            font-size: 1rem;
         }
         @include tableth {
-            font-size: .75rem;
-        }
-        @include movil {
-            font-size: .5rem;
+            font-size: .8rem;
         }
     }
 }
