--- a/sass/partial/_responsive.scss
+++ b/sass/partial/_responsive.scss
@@ -1,3 +1,5 @@
+//RESPONSIVE para todo el SITO
+
 @mixin desktop {
     @media screen and (max-width:768px) {
         @content;        
@@ -21,5 +23,3 @@
         @content;        
     }
 }
-
-
