--- a/sass/partial/_main.scss
+++ b/sass/partial/_main.scss
@@ -2,11 +2,18 @@
 
 main{
     font-family: map-get($tema, fuentetitulos);
-    margin-top: 6rem;
+    margin-top: $margennav;
     .titulo__pagina{
         color: map-get($tema, colorfondo);
         background: map-get($tema, colortitulo);
         opacity: 0.7;
         text-align: center;
+    }
+    .subtitulo__pagina{
+        color: map-get($tema, colorsubtitulo);
+        background: map-get($tema, colortitulo);
+        opacity: 0.7;
+        text-align: center;
+        margin-top: 3rem;
     }
 }
