--- a/sass/partial/_index.scss
+++ b/sass/partial/_index.scss
@@ -1,7 +1,6 @@
 //PAGINA INDEX
 //CAROUSEL
-.containerIndex{ 
-    display: flex;
+.containerIndex{
     justify-content: center;
     .imgCarouselIndex{
         border-radius: 5%;
@@ -27,5 +26,14 @@
         @include tableth {
             font-size: .8rem;
         }
+    }
+}
+
+//SECCION SOLUCIONES
+.indexSolucion{
+      
+    &__img:hover{
+        transform: scale(.99, .99);
+        opacity: .8;
     }
 }
