1 Cambio fuentes y colores

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,13 +1,13 @@
-@import "./partial/variables";
-@import "./partial/responsive";
-@import "./partial/html";
-@import "./partial/body";
-@import "./partial/header";
-@import "./partial/main";
-@import "./partial/hero";
-@import "./partial/index";
-@import "./partial/productos";
-@import "./partial/soluciones";
-@import "./partial/clientes";
-@import "./partial/contacto";
-@import "./partial/footer";
+@import "./partial/variables/variables";
+@import "./partial/responsive/responsive";
+@import "./partial/generales/html";
+@import "./partial/generales/body";
+@import "./partial/generales/header";
+@import "./partial/generales/main";
+@import "./partial/paginas/hero";
+@import "./partial/paginas/index";
+@import "./partial/paginas/productos";
+@import "./partial/paginas/soluciones";
+@import "./partial/paginas/clientes";
+@import "./partial/paginas/contacto";
+@import "./partial/generales/footer";
