--- a/sass/partial/paginas/_soluciones.scss
+++ b/sass/partial/paginas/_soluciones.scss
@@ -1,9 +1,10 @@
 //PAGINA SOLUCIONES
 
 .imgSolucion{
-    height: 70%;
+    height: 100%;
     width: 100%;
     border-radius: 5%;
+    object-fit: fill;
 }
 
 .textodescriptivo{
