--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Koulen&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 * {
@@ -22,48 +23,51 @@ html {
       font-size: 15px; } }
 
 body {
-  background: #212529; }
+  background: white; }
 
 header {
-  font-family: "koulen";
-  font-size: 1.5rem; }
+  font-family: "Montserrat";
+  font-size: 1rem; }
   header nav {
-    background: linear-gradient(0deg, #212529 0%, #0d6efd 100%); }
+    background: linear-gradient(180deg, white 0%, white 95%, #212529 100%); }
     header nav .header__logo {
       width: 3rem;
       height: 3rem;
-      filter: invert(1); }
+      filter: invert(0); }
     @media screen and (max-width: 320px) {
       header nav {
         justify-content: center; } }
     header nav .dropdown:hover .dropdown-menu {
       display: block;
       margin-top: 0; }
+    header nav p {
+      margin: 0; }
+    header nav ul li {
+      margin-right: 1.5rem;
+      margin-left: 1.5rem;
+      text-transform: uppercase; }
 
 main {
-  font-family: "koulen";
-  margin-top: 4.7rem; }
-  main .titulo__pagina {
-    color: #212529;
-    background: radial-gradient(circle, #0d6efd 0%, #19417a 30%, #212529 69%, #212529 100%);
+  font-family: "Montserrat";
+  margin-top: 4.5rem; }
+  main .titulo__pagina, main .subtitulo__pagina, main .subtitulo__seccion {
+    color: #1b1a27;
     opacity: 0.7;
     text-align: center; }
   main .subtitulo__pagina {
-    color: #1b1a27;
-    background: radial-gradient(circle, #0d6efd 0%, #19417a 30%, #212529 69%, #212529 100%);
-    opacity: 0.7;
-    text-align: center;
     margin-top: 3rem; }
+  main .subtitulo__seccion {
+    margin-top: 0rem; }
 
 .hero {
   position: relative; }
   .hero__titulo {
     position: absolute;
     left: 10px;
-    top: .5rem;
-    color: #212529;
+    bottom: 5rem;
+    color: white;
     font-size: 5rem;
-    font-weight: normal; }
+    font-weight: bold; }
     @media screen and (max-width: 768px) {
       .hero__titulo {
         font-size: 4rem; } }
@@ -74,12 +78,12 @@ main {
     position: absolute;
     left: 10px;
     bottom: 2rem;
-    color: #212529;
-    font-size: 3rem;
-    font-weight: normal; }
+    color: white;
+    font-size: 2.5rem;
+    font-weight: blod; }
     @media screen and (max-width: 768px) {
       .hero__subtitulo {
-        font-size: 2rem; } }
+        font-size: 1.5rem; } }
     @media screen and (max-width: 575px) {
       .hero__subtitulo {
         font-size: 1rem; } }
@@ -131,9 +135,10 @@ main {
     border-radius: 5%; }
 
 .imgSolucion {
-  height: 70%;
+  height: 100%;
   width: 100%;
-  border-radius: 5%; }
+  border-radius: 5%;
+  object-fit: fill; }
 
 .textodescriptivo {
   font-family: "Open Sans";
@@ -160,7 +165,7 @@ main {
   padding: 1rem .75rem;
   border: 1px solid black;
   background: #717072;
-  font-family: "koulen";
+  font-family: "Montserrat";
   font-size: 1rem; }
   @media screen and (max-width: 768px) {
     .formulario select, .formulario input, .formulario textarea, .formulario button {
