--- a/sass/partial/generales/_html.scss
+++ b/sass/partial/generales/_html.scss
@@ -1,6 +1,6 @@
 //FORMATO y FUENTES para todo el SITIO
-
 @import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 
