--- a/sass/partial/paginas/_hero.scss
+++ b/sass/partial/paginas/_hero.scss
@@ -3,10 +3,10 @@
     &__titulo{
         position: absolute;
         left: 10px;
-        top: .5rem;
+        bottom: 5rem;
         color: map-get($tema, colorfondo);
         font-size: 5rem;
-        font-weight: normal;
+        font-weight: bold;
         @include desktop{
             font-size: 4rem;
         }
@@ -19,10 +19,10 @@
         left: 10px;
         bottom: 2rem;
         color: map-get($tema, colorfondo);
-        font-size: 3rem;
-        font-weight: normal;
+        font-size: 2.5rem;
+        font-weight: blod;
         @include desktop{
-            font-size: 2rem;
+            font-size: 1.5rem;
         }
         @include tableth {
             font-size: 1rem;
