--- a/sass/partial/variables/_variables.scss
+++ b/sass/partial/variables/_variables.scss
@@ -6,14 +6,15 @@ $textmovil: 15px;
 
 // fuentes y colores sitio
 $tema:(
-    fuentetitulos: 'koulen',
+    fuentetitulos: 'Montserrat',
     fuentetexto: 'Open Sans',
-    colorfondo: #212529,
-    colornav: #0D6EFD,
+    colorfondo: white,
+    colornav: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 95%, rgba(33,37,41,1) 100%),
     colorsubtitulo: #1b1a27,
     colortitulo: radial-gradient(circle, rgba(13,110,253,1) 0%, rgba(25,65,122,1) 30%, rgba(33,37,41,1) 69%, rgba(33,37,41,1) 100%),
 );
 
 // tamano nav
 $tamanonav: 3rem;
-$margennav: $tamanonav + 1.7; //tamanonav + 2rem
+$margennav: $tamanonav + 1.5;
+
