--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "./partial/variables/variables";
 @import "./partial/responsive/responsive";
+@import "./partial/generales/animaciones.scss";
 @import "./partial/generales/html";
 @import "./partial/generales/body";
 @import "./partial/generales/header";
