--- a/sass/partial/generales/_main.scss
+++ b/sass/partial/generales/_main.scss
@@ -1,10 +1,10 @@
 //MAIN para todo el SITIO
 
 main{
-    font-family: map-get($tema, fuentetitulos);
-    margin-top: $margennav;
+    font-family: map-get($tema, fuenteTitulos);
+    padding-top: $paddingMain;
     .titulo__pagina{
-        color: map-get($tema, colorsubtitulo);
+        color: map-get($tema, colorSubtitulo);
         opacity: 0.7;
         text-align: center;
     }
@@ -16,5 +16,8 @@ main{
         @extend .titulo__pagina;
         margin-top: 0rem;
     }
+}
 
+.main__index{
+    padding-top: $paddingMainIndex;
 }
