--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
+@keyframes text-focus-in {
+  0% {
+    filter: blur(12px);
+    opacity: 0; }
+  100% {
+    filter: blur(0px);
+    opacity: 1; } }
+
 * {
   margin: 0;
   padding: 0;
@@ -34,22 +42,28 @@ header {
       width: 3rem;
       height: 3rem;
       filter: invert(0); }
+    header nav .animacionNav:hover {
+      animation: text-focus-in 0.3s cubic-bezier(0.55, 0.085, 0.68, 0.53) both; }
     @media screen and (max-width: 320px) {
       header nav {
         justify-content: center; } }
     header nav .dropdown:hover .dropdown-menu {
       display: block;
       margin-top: 0; }
-    header nav p {
-      margin: 0; }
-    header nav ul li {
-      margin-right: 1.5rem;
-      margin-left: 1.5rem;
+    header nav .navbar1__item {
+      padding-right: 1.5rem;
+      padding-left: 1.5rem;
       text-transform: uppercase; }
+      header nav .navbar1__item .dropdown:hover .dropdown-menu {
+        display: block;
+        margin-top: 0; }
+      header nav .navbar1__item .navbar2 {
+        background-color: #777575;
+        opacity: .95; }
 
 main {
   font-family: "Montserrat";
-  margin-top: 4.5rem; }
+  padding-top: 5rem; }
   main .titulo__pagina, main .subtitulo__pagina, main .subtitulo__seccion {
     color: #1b1a27;
     opacity: 0.7;
@@ -58,6 +72,9 @@ main {
     margin-top: 3rem; }
   main .subtitulo__seccion {
     margin-top: 0rem; }
+
+.main__index {
+  padding-top: 4.5rem; }
 
 .hero {
   position: relative; }
@@ -102,7 +119,7 @@ main {
         font-size: 1.5rem; } }
     @media screen and (max-width: 480px) {
       .containerIndex__titulo {
-        display: none; } }
+        font-size: 1; } }
   .containerIndex__subtitulo {
     font-size: 1.5rem;
     font-family: "Open Sans"; }
@@ -116,6 +133,10 @@ main {
 .indexSolucion__img:hover {
   transform: scale(0.99, 0.99);
   opacity: .8; }
+
+.imgCar {
+  min-height: 300px;
+  object-fit: cover; }
 
 .listaCaracteristicas {
   display: flex;
@@ -135,7 +156,7 @@ main {
     border-radius: 5%; }
 
 .imgSolucion {
-  height: 100%;
+  height: auto;
   width: 100%;
   border-radius: 5%;
   object-fit: fill; }
@@ -175,6 +196,9 @@ main {
   resize: none;
   height: 10rem; }
 
+.formulario button {
+  font-size: .7rem; }
+
 .formulario ::placeholder {
   color: inherit;
   opacity: 1; }
@@ -198,11 +222,3 @@ footer {
   footer a .footer__logo {
     width: 10rem;
     height: 10rem; }
-
-@keyframes text-focus-in {
-  0% {
-    filter: blur(12px);
-    opacity: 0; }
-  100% {
-    filter: blur(0px);
-    opacity: 1; } }
