--- a/sass/partial/generales/_footer.scss
+++ b/sass/partial/generales/_footer.scss
@@ -6,7 +6,7 @@ footer{
     justify-content: space-between;
     color: white;
     background: linear-gradient(180deg, rgba(33,37,41,1) 0%, rgba(13,110,253,1) 100%);
-    font-family: map-get($tema, fuentetexto);
+    font-family: map-get($tema, fuenteTexto);
     .animacionFooter:hover{
       animation:  text-focus-in 0.3s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;    
     }
@@ -25,16 +25,3 @@ footer{
         }
       }
   }
-
-
-//ANIMACION FOOTER -- Animista
-@keyframes text-focus-in {
-    0% {
-      filter: blur(12px);
-      opacity: 0;
-    }
-    100% {
-      filter: blur(0px);
-      opacity: 1;
-    }
-}
