--- a/sass/partial/paginas/_contacto.scss
+++ b/sass/partial/paginas/_contacto.scss
@@ -12,7 +12,7 @@
         padding: 1rem .75rem;
         border: 1px solid black;
         background: rgb(113, 112, 114);
-        font-family: map-get($tema, fuentetitulos);
+        font-family: map-get($tema, fuenteTitulos);
         font-size: 1rem;
         @include desktop {
             font-size: 1rem;
@@ -27,7 +27,8 @@
         height: 10rem;
     }  
     button{
-        @extend select;      
+        @extend select;
+        font-size: .7rem;      
     }
     ::placeholder{
         color: inherit;
