--- a/sass/partial/paginas/_hero.scss
+++ b/sass/partial/paginas/_hero.scss
@@ -4,7 +4,7 @@
         position: absolute;
         left: 10px;
         bottom: 5rem;
-        color: map-get($tema, colorfondo);
+        color: map-get($tema, colorFondo);
         font-size: 5rem;
         font-weight: bold;
         @include desktop{
@@ -18,7 +18,7 @@
         position: absolute;
         left: 10px;
         bottom: 2rem;
-        color: map-get($tema, colorfondo);
+        color: map-get($tema, colorFondo);
         font-size: 2.5rem;
         font-weight: blod;
         @include desktop{
