--- a/sass/partial/paginas/_index.scss
+++ b/sass/partial/paginas/_index.scss
@@ -14,12 +14,12 @@
             font-size: 1.5rem;
         }
         @include tabletv {
-            display: none;
+            font-size: 1;
         }
     }
     &__subtitulo{
         font-size: 1.5rem;
-        font-family: map-get($tema, fuentetexto);
+        font-family: map-get($tema, fuenteTexto);
         @include desktop {
             font-size: 1rem;
         }
@@ -36,4 +36,9 @@
         transform: scale(.99, .99);
         opacity: .8;
     }
+}
+
+.imgCar{
+    min-height: 300px;
+    object-fit: cover;
 }
