--- a/sass/partial/paginas/_soluciones.scss
+++ b/sass/partial/paginas/_soluciones.scss
@@ -1,13 +1,13 @@
 //PAGINA SOLUCIONES
 
 .imgSolucion{
-    height: 100%;
+    height: auto;
     width: 100%;
     border-radius: 5%;
     object-fit: fill;
 }
 
 .textodescriptivo{
-    font-family: map-get($tema, fuentetexto);
+    font-family: map-get($tema, fuenteTexto);
     text-align: justify;
 }
